--- a/sysutils/roller/Makefile
+++ b/sysutils/roller/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2001/02/17 17:42:17 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/23 00:18:19 kim Exp $
 #
 
-DISTNAME=		roller-1.7
+DISTNAME=		roller-1.8
 CATEGORIES=		sysutils
 MASTER_SITES=		ftp://ftp.gw.com/pub/people/kim/
 
