--- a/graphics/glut/Makefile
+++ b/graphics/glut/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2001/02/16 15:22:22 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/23 12:36:55 drochner Exp $
 #
 
-DISTNAME=		Mesa-3.4
+DISTNAME=		Mesa-3.4.1
 PKGNAME=		${DISTNAME:S/Mesa/glut/}
 CATEGORIES=		graphics
 MASTER_SITES= 		ftp://ftp.mesa3d.org/mesa/ \
