--- a/cross/bfd-mdsetimage/Makefile
+++ b/cross/bfd-mdsetimage/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2001/02/25 04:17:40 hubertf Exp $
+# $NetBSD: Makefile,v 1.6 2001/03/23 13:02:39 sakamoto Exp $
 
-DISTNAME=	bfd-mdsetimage-1.0
+DISTNAME=	bfd-mdsetimage-1.15.1
 CATEGORIES=	cross
 MASTER_SITES=	# empty
 DISTFILES=	# empty
