--- a/net/citrix_ica/Makefile
+++ b/net/citrix_ica/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/20 19:06:12 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/23 14:53:43 wiz Exp $
 #
 
+DISTNAME=	citrix_ica-client
 .if (${MACHINE_ARCH} == "i386")
 DISTNAME=	linuxx86
 PKGNAME=	citrix_ica-6.0.908
