--- a/x11/qt2/Makefile.common
+++ b/x11/qt2/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.3 2001/02/06 09:26:11 skrll Exp $
+# $NetBSD: Makefile.common,v 1.4 2001/03/23 18:09:33 drochner Exp $
 #
 
-QTVERSION=	2.2.4
+QTVERSION=	2.3.0
 
 MAINTAINER=	skrll@netbsd.org
 HOMEPAGE=	http://www.trolltech.com/products/qt.html
