--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.186 2001/03/20 19:08:14 wiz Exp $
+# $NetBSD: mk.conf.example,v 1.187 2001/03/24 03:58:15 fredb Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -801,9 +801,10 @@ PAPERSIZE=	A4
 # Possible: defined, not defined
 # Default: not defined
 
-#USE_RSAREF2=	NO
-# Use the RSA reference package
-# Possible: YES (US domestic only), or NO.
+#USE_RSAREF2=
+# Used in openssl to specify use of the RSA reference package instead of
+# the built-in code for the RSA algorithm. (Not recommended!)
+# Possible: YES, or NO.
 # Default: not defined.
 
 #USE_SJ3=
