--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.187 2001/03/24 03:58:15 fredb Exp $
+# $NetBSD: mk.conf.example,v 1.188 2001/03/24 06:21:35 zuntum Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -735,6 +735,16 @@ PAPERSIZE=	A4
 
 #TCSH_STATIC=
 # Produce static version of tcsh binary - advised if used as login shell
+# Possible: defined, not defined
+# Default: not defined
+
+#TEAPOP_WITHOUT_VPOP=
+# Compile teapop without virtual domain support
+# Possible: defined, not defined
+# Default: not defined
+
+#TEAPOP_WITHOUT_APOP=
+# Compile teapop without apop support
 # Possible: defined, not defined
 # Default: not defined
 
