--- a/security/sniff/Makefile
+++ b/security/sniff/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2001/03/13 15:23:26 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2001/03/24 07:37:39 zuntum Exp $
 #
 
 DISTNAME=	sniff-2.0
@@ -7,7 +7,5 @@ MASTER_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	zuntum@netbsd.org
 COMMENT=	Program to sniff logins and passwords
-
-MAKE_ENV+=	CC="${CC}" PREFIX="${PREFIX}"
 
 .include "../../mk/bsd.pkg.mk"
