--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.120 2001/03/20 19:46:17 jwise Exp $
+# $NetBSD: Makefile,v 1.121 2001/03/24 17:49:52 zuntum Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -94,6 +94,7 @@ SUBDIR+=	php4-mysql
 SUBDIR+=	php4-pgsql
 SUBDIR+=	py-pcgi
 SUBDIR+=	py-zpublisher
+SUBDIR+=	quanta
 SUBDIR+=	spfc
 SUBDIR+=	squid
 SUBDIR+=	surfraw
