--- a/net/kdenetwork2/Makefile
+++ b/net/kdenetwork2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/14 16:07:17 skrll Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/24 18:33:55 skrll Exp $
 #
 
 DISTNAME=	kdenetwork-2.1
@@ -8,7 +8,7 @@ COMMENT=	Network modules for the KDE integrated X11 desktop
 
 DEPENDS=	gdbm>=1.7.3:../../databases/gdbm
 DEPENDS+=	uulib-0.5.13:../../converters/uulib
-DEPENDS+=	pth>=1.3.7:../../devel/pth
+DEPENDS+=	ptl>=2.1.7:../../devel/ptl2
 DEPENDS+=	kdesupport-2.1:../../converters/kdesupport2
 DEPENDS+=	kdebase-2.1:../../x11/kdebase2
 
