--- a/security/apg/Makefile
+++ b/security/apg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2001/03/12 08:22:59 zuntum Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/24 19:32:41 zuntum Exp $
 #
 
 DISTNAME=	apg-1.2.13
@@ -9,9 +9,7 @@ MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://www.adel.nursat.kz/apg/
 COMMENT=	Tool set for random password generation
 
-MAKE_ENV+=	"CC=${CC}"						\
-		"FLAGS=${CFLAGS}"					\
-		"INSTALL_PREFIX=${PREFIX}"
+MAKE_ENV+=	FLAGS="${CFLAGS}" INSTALL_PREFIX="${PREFIX}"
 
 post-patch:
 	${SED} "s|/usr/bin/perl|${LOCALBASE}/bin/perl|g"		\
