--- a/x11/qt2-libs/Makefile.common
+++ b/x11/qt2-libs/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.6 2001/03/07 10:47:13 skrll Exp $
+# $NetBSD: Makefile.common,v 1.7 2001/03/24 21:14:40 hubertf Exp $
 #
 
 DISTNAME=		qt-x11-${QTVERSION}
@@ -18,6 +18,7 @@ CONFIGURE_ARGS+=	-static -sm -no-thread \
 			-system-zlib -system-libpng \
 			-system-libmng -system-jpeg \
 			-I${LOCALBASE}/include -L${LOCALBASE}/lib
+CONFIGURE_ARGS+=	-gif	# qt2 does not write compressed GIFs
 
 CONFIGURE_SCRIPT=	${ECHO} yes | ./configure
 
@@ -30,9 +31,6 @@ PATCHDIR=		${PKGSRCDIR}/x11/qt2-libs/patches
 
 .include "../../mk/bsd.prefs.mk"
 
-.if defined(USE_GIF)
-CONFIGURE_ARGS+=	-gif
-.endif
 
 .if ${OPSYS} == "SunOS"
 BUILD_DEPENDS+=	${LOCALBASE}/egcs/bin/g++:../../lang/egcs
