--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.93 2001/03/20 11:59:00 wiz Exp $
+# $NetBSD: Makefile,v 1.94 2001/03/25 00:30:36 manu Exp $
 #
 
 COMMENT=	Programming languages
@@ -9,6 +9,7 @@ SUBDIR+=	awka
 SUBDIR+=	baci
 SUBDIR+=	brandybasic
 SUBDIR+=	bwbasic
+SUBDIR+= blackdown-jdk13
 SUBDIR+=	caml-light
 SUBDIR+=	camlp4
 SUBDIR+=	cim
