--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.121 2001/03/24 17:49:52 zuntum Exp $
+# $NetBSD: Makefile,v 1.122 2001/03/25 05:23:25 mjl Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -71,6 +71,7 @@ SUBDIR+=	p5-CGI-Application
 SUBDIR+=	p5-CGI_Lite
 SUBDIR+=	p5-FCGI
 SUBDIR+=	p5-HTML-Format
+SUBDIR+=	p5-HTML-Mason
 SUBDIR+=	p5-HTML-Parser
 SUBDIR+=	p5-HTML-PrettyPrinter
 SUBDIR+=	p5-HTML-Table
