--- a/textproc/p5-Text-Template/Makefile
+++ b/textproc/p5-Text-Template/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2001/02/17 17:37:38 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2001/03/25 05:34:26 mjl Exp $
 #
 
-DISTNAME=       Text-Template-1.23
+DISTNAME=       Text-Template-1.31
 PKGNAME=        p5-${DISTNAME}
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
