--- a/mail/p5-MailTools/Makefile
+++ b/mail/p5-MailTools/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2001/02/17 18:24:59 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2001/03/25 07:23:18 mjl Exp $
 
-DISTNAME=	MailTools-1.13
-PKGNAME=	p5-MailTools-1.13
+DISTNAME=	MailTools-1.15
+PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	mail perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Mail/}
 
