--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.188 2001/03/24 06:21:35 zuntum Exp $
+# $NetBSD: mk.conf.example,v 1.189 2001/03/25 11:42:55 wennmach Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -636,6 +636,12 @@ PAPERSIZE=	A4
 # Used in postgresql package as the username of the database admin
 # Possible: any user name
 # Default: pgsql
+
+#PGHOME=	/data/${PGUSER}
+# Used in postgresql package as the home directory for the database
+# administrator
+# Possible: any valid location
+# Default: ${PREFIX}/${PGUSER}
 
 #PG_MB_ENCODING=	SQL_ASCII
 # Used to postgresql package to define the language encoding of the
