--- a/math/py-Scientific/files/Setup.in
+++ b/math/py-Scientific/files/Setup.in
@@ -2,4 +2,4 @@
 
 Scientific_netcdf -I@NETCDFPREFIX@/include -I../Scientific/Include \
                   Scientific_netcdf.c -Wl,-R@NETCDFPREFIX@/lib -L@NETCDFPREFIX@/lib -lnetcdf
-Scientific_mpi -I@MPICHPREFIX@/include -I@MPICHPREFIX@/libdata/netbsd/ch_p4/ -I../Scientific/Include Scientific_mpi.c -L@MPICHPREFIX@/libdata/netbsd/ch_p4/  -lmpich
+Scientific_mpi -I@MPICHPREFIX@/include -I@MPICHPREFIX@/include -I../Scientific/Include Scientific_mpi.c -L@MPICHPREFIX@/lib  -lmpich
